--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Umang Kharbanda",
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.2",
     "gulp-util": "^3.0.1"
   }
 }
