--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Umang Kharbanda",
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.2",
-    "gulp-util": "^3.0.1"
+    "gulp-util": "^3.0.1",
+    "jquery": "^2.1.3"
   }
 }
